# habux

./: .gitignore  COPYRIGHT  Cargo.toml  README.md  index.html  package.json  settings.gradle  webpack.config.js
app/: build.gradle
app/src/androidTest/java/io/mju/habux/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/mju/habux/: MainActivity.kt  MainViewModel.kt  Sys.kt
app/src/main/java/io/mju/habux/network/: Telemetry.kt
app/src/main/java/io/mju/habux/ui/climate/: ClimateFragment.kt  ClimateViewModel.kt
app/src/main/java/io/mju/habux/ui/gallery/: GalleryFragment.kt  GalleryViewModel.kt
app/src/main/java/io/mju/habux/ui/geography/: GeographyFragment.kt  GeographyViewModel.kt
app/src/main/java/io/mju/habux/ui/home/: HomeFragment.kt  HomeViewModel.kt
app/src/main/java/io/mju/habux/ui/orientation/: OrientationFragment.kt  OrientationViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  app_bar_main.xml  fragment_climate.xml  fragment_geography.xml  fragment_orientation.xml  fragment_overview.xml  fragment_system.xml  nav_header_main.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/io/mju/habux/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
js/: index.js
src/: lib.rs  main.rs  socket.rs
static/: index.html
(+6 files in other folders)
