[package]
name = "habux"
version = "0.1.0"
authors = ["David Kern <david@mju.io>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/davidkern/habux"
description = "HAB truck camper frontend user interface."

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.34"
bincode = "1.3.1"
chrono = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0.118", features = ["derive"] }
wasm-bindgen = "0.2.68"
yew = "0.17.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.19"
